--- a/David/platformio.ini
+++ b/David/platformio.ini
@@ -21,7 +21,7 @@
 platform = espressif8266
 framework = arduino
 board = nodemcu
-board_f_cpu = 8000000L
+board_f_cpu = 80000000L
 upload_speed = 921600
-#upload_port = wordclock.local
+upload_port = /dev/cu.SLAB_USBto
 #upload_flags = --auth=bugsbunny
