Fix config for my example project

--- a/David/platformio.ini
+++ b/David/platformio.ini
@@ -23,5 +23,5 @@ framework = arduino
 board = nodemcu
 board_f_cpu = 80000000L
 upload_speed = 921600
-upload_port = /dev/cu.SLAB_USBto
+upload_port = /dev/cu.SLAB_USBtoUART
 #upload_flags = --auth=bugsbunny
